--- a/slider.html
+++ b/slider.html
@@ -17,8 +17,10 @@
 
         .before-after-slider {
             position: relative;
-            width: 1000px;
-            height: 600px;
+            width: 90vw; /* Use viewport width for responsiveness */
+            max-width: 1000px; /* Optional: Maximum width */
+            height: 60vh; /* Use viewport height for responsiveness */
+            max-height: 600px; /* Optional: Maximum height */
             overflow: hidden;
             border: 1px solid #ccc;
         }
